--- a/PPE/static/universal.css
+++ b/PPE/static/universal.css
@@ -118,7 +118,6 @@ p{
     /*background-color: red;   */
 }
 
-
 .navbar{
   /*max-width: 80%;*/
   border-bottom:1px solid #535353;
@@ -176,7 +175,7 @@ p{
 
 #links{
     width: 60%;
-    border-left: 1px solid #ccc;
+    /*border-left: 1px solid #ccc;*/
     padding-top:0;
     /*padding-left:10px;*/
     /*background-color: yellow;*/
@@ -190,9 +189,13 @@ p{
     border-bottom:1px solid #ccc;
 }
 #links ul li h3{
-    margin-bottom: .25em;
-    font-weight: 400;
-    font-size: .99em;
+    font-weight: 500;
+    font-size: .85em;
+    padding:0;
+    font-size: 1em; 
+    line-height: 1.125em;
+    margin-top: 1.125em;
+    margin-bottom: .25em; 
 }
 
 #links ul li p{
@@ -215,4 +218,3 @@ p{
 #links ul.tags li.tagit-new{
     display: none;
 }
-
